# marketing-ai-copilot

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  todos.txt  youtube_rag.py
.cursor/rules/: general-rule.mdc  readme-rule.mdc
data/youtube_videos_db/: chroma.sqlite3
src/: __init__.py  youtube_scraper.py
