[project]
name = "marketing-ai-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=0.6.3",
    "google-api-python-client>=2.169.0",
    "ipykernel>=6.29.5",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.60",
    "langchain-openai>=0.3.17",
    "langchain-text-splitters>=0.3.8",
    "langsmith>=0.1.17",
    "openai>=1.78.1",
    "pandas>=2.2.3",
    "protobuf==3.20.0",
    "pypdf>=5.5.0",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
    "webdriver-manager>=4.0.2",
    "youtube-transcript-api>=1.0.3",
]
